# test-94ilr1

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  frontend.yml  infrastructure.yml  release.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/monitoring/elk/: elasticsearch.yml  kibana.yml  logstash.conf
infrastructure/monitoring/grafana/dashboards/: api-gateway.json  context-engine.json  email-service.json  infrastructure.json  response-generator.json
infrastructure/monitoring/jaeger/: jaeger.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/monitoring/prometheus/rules/: alerts.yml  recording.yml
infrastructure/scripts/: apply-terraform.sh  backup-databases.sh  destroy-terraform.sh  init-terraform.sh  rotate-keys.sh
infrastructure/security/: audit-policies.yml  encryption-config.yml  network-policies.yml  waf-rules.json
infrastructure/terraform/aws/: cloudfront.tf  documentdb.tf  eks.tf  elasticache.tf  kms.tf  main.tf  outputs.tf  provider.tf  rds.tf  route53.tf  s3.tf  variables.tf  vpc.tf  waf.tf
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars
infrastructure/terraform/environments/staging/: main.tf  terraform.tfvars
infrastructure/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  tsconfig.json
src/backend/api-gateway/: Dockerfile  package.json  tsconfig.json
src/backend/api-gateway/src/: main.ts
src/backend/api-gateway/src/config/: kong.config.ts
src/backend/api-gateway/src/middleware/: auth.middleware.ts  rate-limit.middleware.ts
src/backend/api-gateway/src/routes/: index.ts
src/backend/api-gateway/test/integration/: gateway.test.ts
src/backend/api-gateway/test/unit/: middleware.test.ts
src/backend/auth-service/: Dockerfile  package.json  tsconfig.json
src/backend/auth-service/src/: main.ts
src/backend/auth-service/src/config/: auth0.config.ts
src/backend/auth-service/src/controllers/: auth.controller.ts
src/backend/auth-service/src/middleware/: jwt.middleware.ts
src/backend/auth-service/src/services/: auth.service.ts
src/backend/auth-service/test/unit/: jwt.test.ts
src/backend/context-engine/: Dockerfile  pyproject.toml
src/backend/context-engine/src/: main.py
src/backend/context-engine/src/api/: routes.py
src/backend/context-engine/src/config/: settings.py
src/backend/context-engine/src/models/: context.py
src/backend/context-engine/src/services/: analyzer.py  nlp_processor.py
src/backend/context-engine/src/utils/: text_processor.py
src/backend/context-engine/tests/integration/: context_test.py
src/backend/context-engine/tests/unit/: analyzer_test.py
src/backend/docs/: api-spec.md  architecture.md  deployment.md  development.md
src/backend/email-service/: Dockerfile  go.mod  go.sum  main.go
src/backend/k8s/: api-gateway.yaml  auth-service.yaml  configmap.yaml  context-engine.yaml  email-service.yaml  ingress.yaml  mongodb.yaml  postgres.yaml  redis.yaml  response-generator.yaml  secrets.yaml
src/backend/response-generator/: Dockerfile  pyproject.toml
src/backend/response-generator/src/: main.py
src/backend/response-generator/src/api/: routes.py
src/backend/response-generator/src/config/: settings.py
src/backend/response-generator/src/models/: response.py
src/backend/response-generator/src/services/: generator.py  template_manager.py
src/backend/response-generator/src/utils/: ai_processor.py
src/backend/response-generator/tests/integration/: generator_test.py
src/backend/response-generator/tests/unit/: template_test.py
src/backend/scripts/: build.sh  deploy.sh  proto-gen.sh  test.sh
src/backend/shared/models/: context.ts  email.ts  response.ts
src/backend/shared/proto/: context.proto  email.proto  response.proto
src/backend/shared/utils/: logger.ts  metrics.ts  tracing.ts
src/web/: .dockerignore  .env.example  .eslintignore  .eslintrc.json  README.md  cypress.config.ts  docker-compose.yml  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  main.tsx  vite-env.d.ts
src/web/src/api/: auth.api.ts  context.api.ts  email.api.ts  response.api.ts
src/web/src/config/: api.config.ts  auth.config.ts  theme.config.ts
src/web/src/constants/: api.constants.ts  app.constants.ts  routes.constants.ts
src/web/src/hooks/: useAuth.ts  useContext.ts  useEmail.ts  useNotification.ts  useResponse.ts  useTheme.ts
src/web/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  EmailLayout.tsx  SettingsLayout.tsx
src/web/src/services/: api.service.ts  auth.service.ts  context.service.ts  email.service.ts  notification.service.ts  response.service.ts
src/web/src/store/: auth.slice.ts  context.slice.ts  email.slice.ts  index.ts  notification.slice.ts  response.slice.ts  settings.slice.ts
src/web/src/styles/: global.css  theme.ts
src/web/src/types/: api.types.ts  auth.types.ts  context.types.ts  email.types.ts  response.types.ts
src/web/src/utils/: api.utils.ts  auth.utils.ts  date.utils.ts  email.utils.ts  storage.utils.ts  validation.utils.ts
src/web/tests/e2e/: auth.spec.ts  email.spec.ts  response.spec.ts  settings.spec.ts
src/web/tests/integration/: api.test.ts  auth.test.ts  email.test.ts
(+71 files in other folders)
