[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "response-generator"
version = "1.0.0"
description = "AI-powered email response generation service with context awareness and template management"
authors = ["AI Email Management Platform Team"]
readme = "README.md"
license = "Proprietary"
requires-python = "^3.11"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Communications :: Email"
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
torch = "^2.1.0"
transformers = "^4.34.0"
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.22"
prometheus-client = "^0.17.1"
opentelemetry-api = "^1.20.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[tool.poetry.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest tests/"
lint = "flake8 src/ tests/"
format = "black src/ tests/ && isort src/ tests/"
typecheck = "mypy src/ tests/"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]